--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,11 @@
+# site
 site_name: GitEHR
+site_url: https://gitehr.org/
+
+# repo
 repo_url: https://github.com/gitehr/gitehr.org
 repo_name: gitehr/gitehr.org
+
 copyright: >
   GitEHR and all intellectual property rights are Copyright &copy; 2022 Dr Marcus Baw. and freely licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>. <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><br/><br/>
 
