moves story of gitehr into own section
Signed-off-by: anchit-chandran <anchit97123@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,7 @@ nav:
   - Home: 'index.md'
   - About: 
     - 'about/about.md'
+    - Origin Story: 'about/gitEHRstory.md'
     - The Tale of Databasechester: 'about/Databasechester.md'
     - Design:
       - 'about/design/audit-trail.md'
