refactor to merge numerous files into one

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,18 +15,7 @@ nav:
     - 'about/about.md'
     - The GitEHR story: 'about/gitEHRstory.md'
     - Databasechester: 'about/Databasechester.md'
-    - Design:
-      - 'about/design/design.md'
-      - 'about/design/audit-trail.md'
-      - 'about/design/longevity.md'
-      - 'about/design/no-lock-in.md'
-      - 'about/design/patient-centricity.md'
-      - 'about/design/portability.md'
-      - 'about/design/provenance.md'
-      - 'about/design/redundancy.md'
-      - 'about/design/security.md'
-      - 'about/design/simplicity.md'
-      - 'about/design/structure.md'
+    - Design: 'about/design/design.md'
     - Specification:
       - 'about/specification/specification.md'
     - Contributors: 'about/contributors.md'
